# AgenticOS

./: .gitignore  .mcp.json  CLAUDE.md  COMPONENT_TEST_REPORT.md  pyproject.toml  test_all_components.py  test_component_definitions.py
.serena/: project.yml
.serena/memories/: agno_current_implementation_analysis.md  agno_enhancement_roadmap.md  agno_feature_integration_guide.md  agno_implementation_patterns.md  code_style_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
agent-frontend/: Dockerfile  package-lock.json  package.json
agent-frontend/src/app/: page.tsx
agent-frontend/src/components/: chat-interface.tsx  document-uploader.tsx
agent-frontend/src/lib/: api.ts
agent-infra-docker/: .gitignore  API_DOCUMENTATION.md  Dockerfile  ENHANCEMENT_README.md  README.md  compose.yaml  inspect_tools.py  pyproject.toml  pytest.ini  requirements.txt
agent-infra-docker/app/: main.py  verify_async_step.py  verify_blog_workflow_async.py
agent-infra-docker/app/agents/: agno_assist.py  content_writer.py  fact_checker.py  multi_format_parser.py  rag_agent.py  research_analyst.py  seo_optimizer.py  vision_agent.py  web_agent.py
agent-infra-docker/app/db/: session.py
agent-infra-docker/app/models/: __init__.py  deepseek_models.py  factory.py  glm.py  glm45_provider.py  glm_models.py  openai_models.py
agent-infra-docker/app/processors/: base.py  image_processor.py  manager.py  pdf_processor.py  structured_processor.py
agent-infra-docker/app/teams/: __init__.py  research_team.py
agent-infra-docker/app/tests/: reproduce_issue.py  test_pdf_reader.py  test_rag_agent.py
agent-infra-docker/app/tools/: __init__.py  file_parsers.py
agent-infra-docker/app/workflows/: __init__.py  blog_workflow.py
agent-infra-docker/app/workflows/steps/: __init__.py  optimization_steps.py  research_steps.py  writing_steps.py
agent-infra-docker/scripts/: build_image.sh  start_db.sh
agent-infra-docker/tests/: test_enhanced_agents.py  test_model_factory.py  test_performance_integration.py  test_teams_and_workflows.py
claudedocs/: AgenticOS_Project_Documentation.md
test_data/: create_test_files.py  sample.csv  sample.docx  sample.json  sample.md  sample.txt  sample.xlsx
