[project]
name = "agenticos"
version = "0.1.3"
description = "Agentic OS for Multi-Modal Retrieval-Augmented Generation (RAG) Agent for Intelligent Knowledge Querying Across Heterogeneous Data Sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==2.3.2",
    "agno-infra==1.0.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "beautifulsoup4>=4.14.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "ddgs==9.5.5",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docstring-parser==0.17.0",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "lxml==6.0.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==2.3.2",
    "openai==1.97.1",
    "openpyxl>=3.1.5",
    "packaging==25.0",
    "pandas>=2.3.3",
    "pgvector==0.4.1",
    "primp==0.15.0",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pypdf>=6.4.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "rich==14.1.0",
    "rich-toolkit==0.14.9",
    "rignore==0.6.4",
    "sentry-sdk==2.33.2",
    "shellingham==1.5.4",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.47.2",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "youtube-transcript-api>=1.2.3",
]
